fix long title overflow

--- a/src/modules/concerts/concerts.scss
+++ b/src/modules/concerts/concerts.scss
@@ -52,6 +52,7 @@
   & .title {
     font-size: 1.1rem;
     font-weight: 600;
+    overflow-wrap: anywhere;
   }
   & .when {
     font-size: 14px;
